--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
-}
-
-body {
-  color: #66f;
-  background-color: #ffffff;
 }
 
 a {
