--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,5 +1,21 @@
 .newpaperImg {
-  width: 40%;
+  width: 36vw;
   float: right;
-  margin-right: 100px;
+  margin-left: 50px;
+}
+
+.mainContent {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-image: linear-gradient(
+    63.1deg,
+    rgba(5, 23, 111, 1) 16.4%,
+    rgba(24, 95, 240, 1) 64.5%
+  );
+}
+
+.mainText {
+  margin: 150px 100px 150px 100px;
+  color: rgb(248, 248, 255);
+  font-family: Poppins;
 }
