--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,18 @@
 * {
   margin: 0;
 }
+body {
+  /* background-image: linear-gradient(
+    63.1deg,
+    rgba(5, 23, 111, 1) 16.4%,
+    rgba(24, 95, 240, 1) 64.5%
+  ); */
+  background-image: linear-gradient(
+    63.1deg,
+    rgba(5, 23, 111, 1) 30.4%,
+    rgba(24, 95, 240, 1) 70.5%
+  );
+}
 
 a {
   color: #66f;
