--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 * {
   margin: 0;
 }
+html {
+  height: 100%;
+}
+
 body {
   /* background-image: linear-gradient(
     63.1deg,
@@ -14,6 +18,7 @@ body {
     rgba(5, 23, 111, 1) 30.4%,
     rgba(24, 95, 240, 1) 70.5%
   );
+  min-height: 100%;
 }
 
 a {
