--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
   margin: 0;
@@ -8,16 +8,6 @@ html {
 }
 
 body {
-  /* background-image: linear-gradient(
-    63.1deg,
-    rgba(5, 23, 111, 1) 16.4%,
-    rgba(24, 95, 240, 1) 64.5%
-  ); */
-  background-image: linear-gradient(
-    63.1deg,
-    rgba(5, 23, 111, 1) 30.4%,
-    rgba(24, 95, 240, 1) 70.5%
-  );
   min-height: 100%;
 }
 
