--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -13,4 +13,18 @@
   margin: 150px 100px 150px 100px;
   color: rgb(248, 248, 255);
   font-family: Poppins;
+  margin: 150px 60px 200px 140px;
+}
+
+.descriptionTitle {
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 70px;
+  margin-bottom: 30px;
+}
+
+.description {
+  font-weight: 400;
+  line-height: 40px;
+  width: 500px;
 }
