--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -10,10 +10,10 @@
 }
 
 .mainText {
-  margin: 150px 100px 150px 100px;
   color: rgb(248, 248, 255);
   font-family: Poppins;
-  margin: 150px 60px 200px 140px;
+  margin: 200px 60px 200px 190px;
+  font-size: 18px;
 }
 
 .descriptionTitle {
