--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -5,8 +5,9 @@
 }
 
 .mainContent {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr; */
+  display: flex;
 }
 
 .mainText {
